# ternoa-enclaves

./: .gitignore  Cargo.lock.REMOVED.git-id  Cargo.toml  Makefile  README.md  SHA256  TODO  client.sh  cosign_1.6.0_amd64.deb.REMOVED.git-id  generate-ias-report.sh  import_account.py  install.sh  restart-server.sh  rust_sgx.manifest.template  secret  sgx_server.manifest  sgx_server.manifest.sgx  sgx_server.manifest.sgx.REMOVED.git-id  sgx_server.manifest.template  start-server.sh  stop-clean.sh  stop-server.sh  ternoa_account.json
.github/workflows/: sign-and-release-alphanet.yml  sign-and-release-dev0.yml  sign-and-release-dev1.yml  sign-and-release-mainnet.yml  sign-and-release.yml
artifacts/: get_metadata.sh
client/: client.sh  postman.json
credentials/artifacts/: get_metadata.sh  polkadot_metadata.scale.REMOVED.git-id  ternoa_alphanet.code  ternoa_alphanet.code.REMOVED.git-id  ternoa_alphanet.scale  ternoa_alphanet.scale.REMOVED.git-id  ternoa_dev0.scale  ternoa_dev0.scale.REMOVED.git-id  ternoa_dev1.code  ternoa_dev1.code.REMOVED.git-id  ternoa_dev1.scale  ternoa_dev1.scale.REMOVED.git-id  ternoa_mainnet.scale  ternoa_mainnet.scale.REMOVED.git-id
credentials/assets/: script.js
credentials/certificates/: backup.tar  ca_bundle.pem  cached_account_DjElY4dhzbRha9fhY9wmLuvuTZBzEKcE2oAWwOTzOFY  cached_account_fmg_jgyBNwVcLAeVulKWtWFhOV6pluIPu8WU8wLY5aY  cached_cert_QZJirP4unPgaN70CP5QZ-OKBbcuZj0jDhupM0D_5How  cached_cert_sNxMhUJYLZjdTI6oO75L2EAsBSjojEN0Jdx8vcNiKhc  clear.sh  generate-ecc.sh  generate-rsa.sh  generate.sh  openssl_server.cnf  server_cert.pem  server_key.pem
credentials/certificates/ssl_certs/: certificate.crt  private.key
credentials/certificates/ssl_certs/141-94-162-96/: certificate.crt  private.key
credentials/certificates/ssl_certs/ns3204502.ip-141-94-162.eu/: certificate.crt  private.key
credentials/keys/: cosign.pub  password.txt  private.txt  public.txt
credentials/keys/dev/: cosign.key
credentials/nft/: 248.secret  298.secret  353.secret  48384.secret
deployment/: Dockerfile  docker-compose.yml  ternoa_enclave_deployment.zip.REMOVED.git-id
deployment/docker/: Dockerfile  custom-image-build.sh
deployment/docker/build-image/: Dockerfile  custom-image-build.sh
deployment/docker/run-enclave/multi-enclave/: docker-compose.yml  docker-compose.yml~  official-multicontainer-run.sh  proxy-docker-compose.yml
deployment/docker/run-enclave/single-enclave/: docker-compose.yml  official-container-run.sh
deployment/ternoa_enclave/: Dockerfile  README.md  docker-compose.yml
deployment/ternoa_enclave/credentials/artifacts/: get_metadata.sh  ternoa_dev0.scale  ternoa_dev0.scale.REMOVED.git-id  ternoa_dev1.scale.REMOVED.git-id  ternoa_mainnet.scale  ternoa_mainnet.scale.REMOVED.git-id
deployment/ternoa_enclave/gramine/: Makefile  sgx_server_dev.manifest.template
deployment/ternoa_enclave/gramine/trusted/arch_libdir/: libgcc_s.so.1.REMOVED.git-id
deployment/ternoa_enclave/gramine/trusted/gramine/runtime/glibc/: ld-linux-x86-64.so.2.REMOVED.git-id  libanl.so.1  libc.so.6  libc.so.REMOVED.git-id  libm.so.REMOVED.git-id  libmbedcrypto_gramine.a.REMOVED.git-id  libmbedtls_gramine.a.REMOVED.git-id  libmbedtls_gramine.so.REMOVED.git-id  libmbedx509_gramine.a.REMOVED.git-id  libmvec.so.1.REMOVED.git-id  libnsl.so.1  libnss_db.so.2  libnss_files.so.2  libra_tls_verify_epid.so.REMOVED.git-id  librt.so.1  libsecret_prov_attest.so.REMOVED.git-id  libutil.so.1
deployment/ternoa_enclave/scripts/: clear-server.sh  fetch-release.sh  install.sh  resume-server.sh  sgx-microcode-update.sh  start-server.sh
gramine/: Makefile  Makefile~  sgx_server.manifest  sgx_server.manifest.sgx  sgx_server.manifest.sgx.REMOVED.git-id  sgx_server.manifest.template  sgx_server_dev.manifest.template
gramine/trusted/: update-trusted.sh
gramine/trusted/arch_libdir/: libcrypto.so.3.REMOVED.git-id  libssl.so.3.REMOVED.git-id
gramine/trusted/etc/ssl/certs/: ca-certificates.crt.REMOVED.git-id
gramine/trusted/gramine/: libsysdb.so.REMOVED.git-id
gramine/trusted/gramine/runtime/glibc/: libdl.so.2  libmbedcrypto_gramine.so.14  libmbedcrypto_gramine.so.14.REMOVED.git-id  libmbedtls_gramine.so.19  libmbedx509_gramine.so.5  libmvec.so.1  libnsl.so.1.REMOVED.git-id  libra_tls_attest.so.REMOVED.git-id  libresolv.so.2  libsecret_prov_verify_epid.so.REMOVED.git-id
scripts/: build-binary.sh  build-sign.sh  clear-server.sh  fetch-release.sh  generate-ias-report.sh  generate-ias-report.sh~  install.sh  resume-server.sh  start-all.sh  start-server.sh  start-server.sh~  stop-all.sh  stop-server.sh  stop-server.sh~
scripts/cluster/: clear-all.sh  start-all.sh  stop-all.sh  update-code-all.sh
signer/src/: main.rs
src/: main.rs
src/attestation/: mod.rs  ra.rs
src/backup/: admin.rs  admin_bulk.rs  admin_nftid.rs  enclave.rs  graphql.rs  metric.rs  mod.rs  sync.rs  zipdir.rs
src/backup/query/: schema.graphql  schema.graphql.REMOVED.git-id
src/chain/: capsule.rs  chain.rs  constants.rs  core.rs  dynamic.rs  helper.rs  log.rs  mod.rs  nft.rs  verify.rs
src/core/: capsule.rs  chain.rs  log.rs  mod.rs  nft.rs  verify.rs
src/keys/: ipfs.rs  mod.rs  pgp_keys.rs  pq_keys.rs  shamir.rs  zipdir.rs
src/pgp/: cosign.rs  mod.rs  pgp.rs
src/replication/: admin_bulk.rs  admin_nftid.rs  metric.rs  mod.rs  sync.rs  upgrade.rs  zipdir.rs
src/replication/query/: secrets.graphql
src/server/: http_server.rs  mod.rs  server_common.rs  state.rs
src/servers/: binary_check.rs  http_server.rs  mod.rs  rpc_server.rs  server_common.rs  state.rs  ws_server.rs
src/sign/: cosign.rs  mod.rs  pgpsign.rs
tools/: Cargo.lock.REMOVED.git-id  Cargo.toml  README.md  sgx_signer.REMOVED.git-id
tools/signer_bin/: Cargo.lock.REMOVED.git-id
tools/src/: main.rs
