[package]
name = "sgx_server"
version = "0.4.2"
edition = "2021"

[[bin]]
name = "sgx_server"
path = "src/main.rs"

[dependencies]

# Client
reqwest = {version = "0.11.18", default-features=false, features = ["rustls-tls-webpki-roots"]}
mime = "0.3"
hyper = { version = "0.14", features = ["full"] }
graphql_client = "0.13.0"

# Server
axum = {version = "0.6.18", features = ["ws", "headers", "macros", "multipart", "tokio"]}
axum-jrpc = "0.3.2"
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
rustls = "0.20.6"

tokio = { version = "1.26", features = ["full"] }
tokio-util = "0.7.7"
tokio-stream = { version="0.1.9", features = ["net"] }

tower-http = { version = "0.4.0", features = ["add-extension","cors","fs","trace","timeout", "limit"] }
tower = {version = "0.4.13", features = ["timeout", "util"]}
urlencoding = "2.1.2"

# codec
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
hex = "0.4.3"
base64 = "0.21.0"
zip = "0.6.4"

# Time and Trace
chrono = "0.4.23"
tokio-cron-scheduler = "0.9.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt"] }
sentry = { version = "0.30.0", features = ["anyhow", "debug-images", "tracing", "tower", "tower-http"] }

# Tools
cached = "0.42.0"
clap = { version = "4.0.29", features = ["derive"] }
sysinfo = "0.27.0"
anyhow = "1.0.68"
walkdir = "2.3.2"

futures = "0.3.25"
tokio-test = "0.4.2"
async-trait = "0.1.61"

# Ternoa/Polkadot
parity-scale-codec = { version = "3.2.1", default-features = false, features = ["derive", "full", "bit-vec"] }
jsonrpsee-ws-client = { version = "0.19.0", features = ["webpki-tls"] }
subxt = { version = "0.30.1" , features = ["substrate-compat"]}
sp-keyring = "24.0.0"
sp-runtime = { version = "24.0.0" }
sp-core = { version = "21.0.0", default-features = false, features = ["full_crypto"] }

# Crypto / Keys
rand = "0.8.5"
sha256 = "1.1.1"
sigstore = "0.6.0"
rustls-acme = {version = "0.5.2", features = ["axum"]}

# Anti-Analysis
#debugoff = { version = "0.2.1", features = ["obfuscate", "syscallobf"] }

[profile.release]
debug = false
strip = "symbols"
panic = "abort"

[dev-dependencies]
sequoia-openpgp = "1.13.0"

[features]
default = ["dev-0"]
mainnet = []
alphanet = []
dev-1 = []
dev-0 = []
custom = []
