[package]
name = "sgx_server"
version ="0.4.4"
edition = "2021"

[[bin]]
name = "sgx_server"
path = "src/main.rs"

[dependencies]

# Client
reqwest = "0.11.18"
mime = "0.3"
hyper = { version = "0.14", features = ["full"] }
graphql_client = "0.13.0"

# Server
axum = {version = "0.6.20", features = ["ws", "headers", "macros", "multipart", "tokio"]}
axum-server = { version = "0.5", features = ["tls-rustls"] }
rustls = "0.21.6"

tokio = { version = "1.30", features = ["full"] }
tokio-util = "0.7.9"
tokio-stream = { version="0.1.9", features = ["net"] }

tower-http = { version = "0.4.3", features = ["add-extension","cors","fs","trace","timeout", "limit"] }
tower = {version = "0.4.13", features = ["timeout", "util"]}
urlencoding = "2.1.3"

# codec
serde_json = "1.0.107"
serde = { version = "1.0.183", features = ["derive"] }
hex = "0.4.3"
base64 = "0.21.0"
zip = "0.6.4"
async_zip = {version = "0.0.15", features = ["deflate"]}

# Time and Trace
chrono = "0.4.31"
tokio-cron-scheduler = "0.9.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt"] }
sentry = { version = "0.31.7", features = ["anyhow", "debug-images", "tracing", "tower", "tower-http"] }

# Tools
cached = "0.45.1"
clap = { version = "4.4.4", features = ["derive"] }
sysinfo = "0.29.10"
anyhow = "1.0.72"
walkdir = "2.3.2"

futures = "0.3.25"
futures-util = { version = "0.3", features = ["io"] }
tokio-test = "0.4.2"
async-trait = "0.1.61"

# Ternoa/Polkadot
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["derive", "full", "bit-vec"] }
jsonrpsee-ws-client = { version = "0.20.1", features = ["webpki-tls"] }
subxt = { version = "0.31.0" , features = ["substrate-compat"]}
sp-keyring = "25.0.0"
sp-runtime = { version = "25.0.0" }
#sp-core = { version = "22.0.0", default-features = false, features = ["full_crypto"] }

# Crypto / Keys
rand = "0.8.5"
sha256 = "1.3.0"
rustls-acme = {version = "0.7.3", features = ["axum"]}
ecies = {version = "0.2", features = ["std"]}

[profile.release]
debug = false
strip = "symbols"
panic = "abort"

[dev-dependencies]
sequoia-openpgp = "1.13.0"

[features]
default = ["dev0-net"]
main-net = []
alpha-net = []
dev1-net = []
dev0-net = []
local-net = []