[package]
name = "signer_bin"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "sgx_signer"
path = "src/main.rs"

[dependencies]

# Server
#rustls = "0.21.7"
reqwest = "0.11.16"

tokio = { version = "1.27", features = ["full"] }
tokio-util = "0.7.7"
tokio-stream = { version="0.1.12", features = ["net"] }
tokio-cron-scheduler = "0.9.4"

tower-http = { version = "0.4", features = ["cors","fs", "trace", "timeout"] }
tower = {version = "0.4.13", features = ["timeout"]}

# codec
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
hex = "0.4.3"
base64 = "0.21.0"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }

rand = "0.8.5"
clap = { version = "4.2.1", features = ["derive"] }
anyhow = "1.0.70"

# IPFS
futures = "0.3.27"

# Ternoa/Polkadot
parity-scale-codec = { version = "3.4.0", default-features = false, features = ["derive", "full", "bit-vec"] }
subxt = { version = "0.31.0" , features = ["substrate-compat"]}
#sp-core = { version = "21.0.0", default-features = false, features = ["full_crypto"] }

# Crypto / Keys
sha256 = "1.1.2"


[features]
default = ["alpha-net"]
main-net = []
alpha-net = []
dev1-net = []
dev0-net = []
